--- a/src/static/index.html
+++ b/src/static/index.html
@@ -31,6 +31,6 @@
     <script src="./assets/scripts/mhwc.min.js?timestamp" async></script>
 </head>
 <body>
-    <div id="ot-router"></div>
+    <div id="mhwc-router"></div>
 </body>
 </html>
