1. update git ignore 2. update index

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -25,7 +25,7 @@
             e.parentNode.insertBefore(s, e);
         }
         var _gaq = [['_setAccount', 'UA-30675094-1'], ['_trackPageview']];
-        asyncLoad(('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js');
+        asyncLoad('//www.google-analytics.com/analytics.js');
     </script>
     <script src="./assets/scripts/vendor/modernizr.min.js?timestamp"></script>
     <script src="./assets/scripts/mhwc.min.js?timestamp" async></script>
