--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,7 +15,7 @@
     <link rel="author" href="https://plus.google.com/+ScarWu">
     <link rel="image_src" href="https://scar.tw/images/icon.jpg">
     <link rel="shortcut icon" href="https://scar.tw/favicon.ico">
-    <link rel="stylesheet" href="./assets/styles/mhwc.min.css?timestamp">
+    <link rel="stylesheet" href="./assets/styles/main.min.css?timestamp">
 
     <script>
         function asyncLoad(src) {
@@ -28,7 +28,7 @@
         asyncLoad('//www.google-analytics.com/analytics.js');
     </script>
     <script src="./assets/scripts/vendor/modernizr.min.js?timestamp"></script>
-    <script src="./assets/scripts/mhwc.min.js?timestamp" async></script>
+    <script src="./assets/scripts/main.min.js?timestamp" async></script>
 </head>
 <body>
     <div id="mhwc-router"></div>
