1. refactor gulp & webpack config

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" style="display: block !important;" lang="zh-tw">
+<html lang="zh-tw">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -27,7 +27,6 @@
         var _gaq = [['_setAccount', 'UA-30675094-1'], ['_trackPageview']];
         asyncLoad('//www.google-analytics.com/analytics.js');
     </script>
-    <script src="./assets/scripts/vendor/modernizr.min.js?timestamp"></script>
     <script src="./assets/scripts/main.min.js?timestamp" async></script>
 </head>
 <body>
