--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-tw">
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
