--- a/src/static/index.html
+++ b/src/static/index.html
@@ -25,7 +25,7 @@
     <script src="https://www.google-analytics.com/analytics.js" async></script>
 </head>
 <body>
-    <div id="mhwc-router"></div>
+    <div id="mhwc"></div>
     <script src="./assets/scripts/main.min.js?timestamp" async></script>
 </body>
 </html>
