1. release, fix canonical meta 2. remove useless key

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:description" name="description" content="Monster Hunter: World - Calculator">
     <meta property="og:title" content="Monster Hunter: World - Calculator">
-    <meta property="og:url" content="https://scar.tw/MHWHCalculator/">
+    <meta property="og:url" content="https://scar.tw/MHWCalculator/">
     <meta property="og:image" content="https://scar.tw/images/icon.jpg">
     <meta property="og:type" content="website">
 
     <title>Monster Hunter: World - Calculator</title>
 
-    <link rel="canonical" href="https://scar.tw/MHWHCalculator/">
+    <link rel="canonical" href="https://scar.tw/MHWCalculator/">
     <link rel="author" href="https://plus.google.com/+ScarWu">
     <link rel="image_src" href="https://scar.tw/images/icon.jpg">
     <link rel="shortcut icon" href="https://scar.tw/favicon.ico">
