1. update ui langs 2. refactor

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="https://scar.tw/images/icon.jpg">
     <meta property="og:type" content="website">
 
-    <title>Monster Hunter: World - Calculator</title>
+    <title>Monster Hunter World: Iceborne - Calculator</title>
 
     <link rel="canonical" href="https://scar.tw/MHWCalculator/">
     <link rel="author" href="https://plus.google.com/+ScarWu">
