1. fix fa lib bug 2. add cover og:image 3. release

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,7 +13,7 @@
 
     <link rel="canonical" href="https://scar.tw/MHWCalculator/">
     <link rel="author" href="https://plus.google.com/+ScarWu">
-    <link rel="image_src" href="https://scar.tw/images/icon.jpg">
+    <link rel="image_src" href="https://scar.tw/MHWCalculator/cover.jpg">
     <link rel="shortcut icon" href="https://scar.tw/favicon.ico">
     <link rel="stylesheet" href="./assets/styles/main.min.css?timestamp">
 
