--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,21 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta property="og:description" name="description" content="選擇你所要的技能，系統會配出數套裝備供你挑選，並且提供人物素質計算，讓你狩獵無往不利。">
-    <meta property="og:title" content="魔物獵人世界: 冰原 - 配裝計算機">
-    <meta property="og:url" content="https://scar.tw/MHWCalculator/">
-    <meta property="og:image" content="https://scar.tw/MHWCalculator/cover.jpg">
-    <meta property="og:type" content="website">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta property="og:description" name="description" content="選擇你所要的技能，系統會配出數套裝備供你挑選，並且提供人物素質計算，讓你狩獵無往不利。" />
+    <meta property="og:title" content="魔物獵人世界: 冰原 - 配裝計算機" />
+    <meta property="og:url" content="https://scar.tw/MHWCalculator/" />
+    <meta property="og:image" content="https://scar.tw/MHWCalculator/cover.jpg" />
+    <meta property="og:type" content="website" />
 
     <title>魔物獵人世界: 冰原 - 配裝計算機</title>
 
-    <link rel="canonical" href="https://scar.tw/MHWCalculator/">
-    <link rel="author" href="https://plus.google.com/+ScarWu">
-    <link rel="image_src" href="https://scar.tw/MHWCalculator/cover.jpg">
-    <link rel="shortcut icon" href="https://scar.tw/favicon.ico">
-    <link rel="stylesheet" href="./assets/styles/main.min.css?timestamp">
+    <link rel="canonical" href="https://scar.tw/MHWCalculator/" />
+    <link rel="author" href="https://plus.google.com/+ScarWu" />
+    <link rel="image_src" href="https://scar.tw/MHWCalculator/cover.jpg" />
+    <link rel="shortcut icon" href="https://scar.tw/favicon.ico" />
+    <link rel="stylesheet" href="./assets/styles/main.min.css?timestamp" />
 
     <script>
         window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
