1. release 2. use ga4 3. update components

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,12 +17,13 @@
     <link rel="shortcut icon" href="https://scar.tw/favicon.ico" />
     <link rel="stylesheet" href="./assets/styles/main.min.css?timestamp" />
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZVS19XQ4T"></script>
     <script>
-        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-        ga('create', 'UA-30675094-1', 'auto');
-        ga('send', 'pageview');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-YZVS19XQ4T');
     </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
 </head>
 <body>
     <div id="mhwc"></div>
